--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "gsap": "^3.12.5",
+        "splitting": "^1.1.0"
     }
 }
